fix homepage overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
 input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
